# archimedesprincipleonship

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp  readme.md
src/app/: hydrostatics.cpp  hydrostatics.h  stabilityengine.cpp  stabilityengine.h  vessel.cpp  vessel.h
src/physics/: cargobody.cpp  cargobody.h  physicsengine.cpp  physicsengine.h  physicsutils.cpp  physicsutils.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  vesselinputform.cpp  vesselinputform.h  vesselinputwidget.cpp  vesselinputwidget.h
src/widgets/: cargoiconwidget.cpp  cargoiconwidget.h  cargoitemwidget.cpp  cargoitemwidget.h  stabilityvisualwidget.cpp  stabilityvisualwidget.h
